deploy/Service_webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
spec:
  type: ClusterIP
  selector:
    app: webhook
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
