deploy/Route_webhook.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook
spec:
  host: multiplexer-proxy-webhook.apps.sno-auth-testing.lab.rh-itewk.internal
  to:
    kind: Service
    name: webhook
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
